@@ -1,3 +1,7 @@
+2002-05-11  Samuel Stringham  <sams@e-sa.com>
+
+	* logview.c: remove bogus spacing. Fixes #81399.
+
 2002-05-10  Glynn Foster  <glynn.foster@sun.com>
 
 	* calendar.c, logview.c, zoom.c: Fix crashes on dialog 
